syntax = "proto3";

option go_package = ".;proto";

enum MessageType {
  MsgUp = 0;
  MsgUpRsp = 1;
  MsgHeartbeat = 2;
  MsgHeartbeatRsp = 3;
  MsgVote = 4;
  MsgVoteRsp = 5;
}

message RaftMessage {
  MessageType messageType = 1;
  string from = 2;
  string to = 3;
  uint64 term = 4;
  repeated Peer peers = 5;
  bytes context = 6;
}

message Peer {
  string ip = 1;
}

enum RaftState {
  None = 0;
  Leader = 1;
  Candidate = 2;
  Follower = 3;
  Watcher = 4;
}

